// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`schema for 'US_ME' 'RES001' 1`] = `
{
  "admissionDate": 2013-11-16T00:00:00.000Z,
  "custodyLevel": "MINIMUM",
  "displayId": "dRES001",
  "facilityId": "FACILITY NAME",
  "gender": "MALE",
  "officerId": "OFFICER5",
  "personExternalId": "RES001",
  "personName": {
    "givenNames": "First",
    "surname": "Resident",
  },
  "personType": "RESIDENT",
  "portionServedNeeded": "2/3",
  "pseudonymizedId": "anonres001",
  "releaseDate": 2024-11-16T00:00:00.000Z,
  "stateCode": "US_ME",
  "unitId": "UNIT A",
  "usMePortionNeededEligibleDate": 2021-11-16T00:00:00.000Z,
}
`;

exports[`schema for 'US_ME' 'RES002' 1`] = `
{
  "admissionDate": 2018-02-17T00:00:00.000Z,
  "custodyLevel": "MINIMUM",
  "displayId": "dRES002",
  "facilityId": "FACILITY NAME",
  "gender": "FEMALE",
  "officerId": "OFFICER5",
  "personExternalId": "RES002",
  "personName": {
    "givenNames": "Second",
    "surname": "Resident",
  },
  "personType": "RESIDENT",
  "portionServedNeeded": "2/3",
  "pseudonymizedId": "anonres002",
  "releaseDate": 2024-02-16T00:00:00.000Z,
  "stateCode": "US_ME",
  "unitId": "UNIT B",
  "usMePortionNeededEligibleDate": 2022-02-16T00:00:00.000Z,
}
`;

exports[`schema for 'US_ME' 'RES003' 1`] = `
{
  "admissionDate": 2019-06-18T00:00:00.000Z,
  "custodyLevel": "MINIMUM",
  "displayId": "dRES003",
  "facilityId": "FACILITY NAME",
  "gender": "TRANS_FEMALE",
  "officerId": "OFFICER5",
  "personExternalId": "RES003",
  "personName": {
    "givenNames": "Third",
    "surname": "Resident",
  },
  "personType": "RESIDENT",
  "portionServedNeeded": "1/2",
  "pseudonymizedId": "anonres003",
  "releaseDate": 2023-12-16T00:00:00.000Z,
  "stateCode": "US_ME",
  "unitId": "UNIT B",
  "usMePortionNeededEligibleDate": 2021-09-16T00:00:00.000Z,
}
`;

exports[`schema for 'US_ME' 'RES004' 1`] = `
{
  "admissionDate": 2019-05-18T00:00:00.000Z,
  "custodyLevel": "MINIMUM",
  "displayId": "dRES004",
  "facilityId": "FACILITY NAME",
  "gender": "INTERNAL_UNKNOWN",
  "officerId": "OFFICER5",
  "personExternalId": "RES004",
  "personName": {
    "givenNames": "Fourth",
    "surname": "Resident",
  },
  "personType": "RESIDENT",
  "portionServedNeeded": "1/2",
  "pseudonymizedId": "anonres004",
  "releaseDate": 2024-01-16T00:00:00.000Z,
  "stateCode": "US_ME",
  "unitId": "UNIT A",
  "usMePortionNeededEligibleDate": 2021-09-16T00:00:00.000Z,
}
`;

exports[`schema for 'US_ME' 'RES005' 1`] = `
{
  "admissionDate": 2020-05-16T00:00:00.000Z,
  "custodyLevel": "MINIMUM",
  "displayId": "dRES005",
  "facilityId": "FACILITY NAME",
  "gender": "TRANS",
  "officerId": "OFFICER5",
  "personExternalId": "RES005",
  "personName": {
    "givenNames": "Fifth",
    "surname": "Resident",
  },
  "personType": "RESIDENT",
  "portionServedNeeded": "1/2",
  "pseudonymizedId": "anonres005",
  "releaseDate": 2024-05-16T00:00:00.000Z,
  "stateCode": "US_ME",
  "unitId": "UNIT B",
  "usMePortionNeededEligibleDate": 2022-05-16T00:00:00.000Z,
}
`;

exports[`schema for 'US_ME' 'RES006' 1`] = `
{
  "admissionDate": 2015-02-16T00:00:00.000Z,
  "custodyLevel": "MINIMUM",
  "displayId": "dRES006",
  "facilityId": "FACILITY NAME",
  "gender": "TRANS",
  "officerId": "OFFICER5",
  "personExternalId": "RES006",
  "personName": {
    "givenNames": "Sixth",
    "surname": "Resident",
  },
  "personType": "RESIDENT",
  "portionServedNeeded": "2/3",
  "pseudonymizedId": "anonres006",
  "releaseDate": 2024-02-16T00:00:00.000Z,
  "stateCode": "US_ME",
  "unitId": "UNIT B",
  "usMePortionNeededEligibleDate": 2021-02-16T00:00:00.000Z,
}
`;

exports[`schema for 'US_ME' 'RES007' 1`] = `
{
  "admissionDate": 2019-06-16T00:00:00.000Z,
  "custodyLevel": "MINIMUM",
  "displayId": "dRES007",
  "facilityId": "FACILITY NAME",
  "gender": "FEMALE",
  "officerId": "OFFICER5",
  "personExternalId": "RES007",
  "personName": {
    "givenNames": "Seventh",
    "surname": "Resident",
  },
  "personType": "RESIDENT",
  "portionServedNeeded": "1/2",
  "pseudonymizedId": "anonres007",
  "releaseDate": 2023-12-16T00:00:00.000Z,
  "stateCode": "US_ME",
  "unitId": "UNIT B",
  "usMePortionNeededEligibleDate": 2021-09-16T00:00:00.000Z,
}
`;

exports[`schema for 'US_ME' 'RES008' 1`] = `
{
  "admissionDate": 2015-08-16T00:00:00.000Z,
  "custodyLevel": "MINIMUM",
  "displayId": "dRES008",
  "facilityId": "FACILITY NAME",
  "gender": "TRANS",
  "officerId": "OFFICER5",
  "personExternalId": "RES008",
  "personName": {
    "givenNames": "Eighth",
    "surname": "Resident",
  },
  "personType": "RESIDENT",
  "portionServedNeeded": "2/3",
  "pseudonymizedId": "anonres008",
  "releaseDate": 2024-08-16T00:00:00.000Z,
  "stateCode": "US_ME",
  "unitId": "UNIT A",
  "usMePortionNeededEligibleDate": 2021-08-16T00:00:00.000Z,
}
`;

exports[`schema for 'US_ME' 'RES998' 1`] = `
{
  "admissionDate": 2020-05-16T00:00:00.000Z,
  "custodyLevel": "MEDIUM",
  "displayId": "dRES998",
  "facilityId": "FACILITY NAME",
  "gender": "MALE",
  "officerId": "OFFICER5",
  "personExternalId": "RES998",
  "personName": {
    "givenNames": "NoRelease",
    "surname": "Resident",
  },
  "personType": "RESIDENT",
  "pseudonymizedId": "anonres998",
  "stateCode": "US_ME",
  "unitId": "UNIT B",
}
`;

exports[`schema for 'US_ME' 'RES999' 1`] = `
{
  "admissionDate": 2020-05-16T00:00:00.000Z,
  "custodyLevel": "MEDIUM",
  "displayId": "dRES999",
  "facilityId": "FACILITY NAME",
  "gender": "MALE",
  "officerId": "OFFICER5",
  "personExternalId": "RES999",
  "personName": {
    "givenNames": "Ineligible",
    "surname": "Resident",
  },
  "personType": "RESIDENT",
  "portionServedNeeded": "1/2",
  "pseudonymizedId": "anonres999",
  "releaseDate": 2025-05-16T00:00:00.000Z,
  "stateCode": "US_ME",
  "unitId": "UNIT B",
  "usMePortionNeededEligibleDate": 2022-11-16T00:00:00.000Z,
}
`;
